[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/unit/soldier/soldier.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
dmg_from_fire = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = -24.0
margin_top = -88.0
margin_right = 16.0
margin_bottom = -48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire_hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="fire_hitbox"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="fire_hitbox" to="." method="_on_fire_hitbox_area_entered"]
[connection signal="area_shape_entered" from="fire_hitbox" to="." method="_on_fire_hitbox_area_shape_entered"]
[connection signal="body_entered" from="fire_hitbox" to="." method="_on_fire_hitbox_body_entered"]
[connection signal="body_shape_entered" from="fire_hitbox" to="." method="_on_fire_hitbox_body_shape_entered"]
